--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Tom Konidas <tomkonidas@protonmail.ch>",
   "license": "MIT",
   "dependencies": {
-    "bulma": "^0.6.2"
+    "bulma": "^0.6.2",
+    "global": "^4.3.2"
   },
   "devDependencies": {
     "browser-sync": "^2.23.5",
